# pull_request_tutorial

./: Cargo.toml  README.md  template.json
.github/workflows/: pull_request_tutorial.yml
json/: 5u6a4_0.json  RyushiAok_0.json  RyushiAok_1.json  RyushiAok_2.json  SsKkf_0.json  amagiwa_0.json  ichi_0.json  ippee.json  ippee_1.json  ippee_3.json  ippee_4.json
src/: json.rs  json_story.rs  main.rs  story.rs
