[package]
name = "pull_request_tutorial"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = { version = "1.0.127", features = ["derive"] }
serde_json = "1.0.66"
rand = "0.8.4"
log = "0.4.14"
env_logger = "0.9.0"
